apps/agoravai/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: agoravai
    backstage.io/kubernetes-id: agoravai
    # istio-injection: enabled
  name: agoravai
spec:
  finalizers:
  - kubernetes
