apps/agoravai/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agoravai-stable
  namespace: agoravai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: agoravai.diegoluisi.eti.br
  labels:
    app: agoravai
    backstage.io/kubernetes-id: agoravai
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: agoravai

---
apiVersion: v1
kind: Service
metadata:
  name: agoravai-canary
  namespace: agoravai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: agoravai.diegoluisi.eti.br
  labels:
    app: agoravai
    backstage.io/kubernetes-id: agoravai
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: agoravai
