apps/agoravai/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: agoravai-vsvc
  namespace: agoravai
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - agoravai.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: agoravai-stable
      weight: 100
    - destination:
        host: agoravai-canary
      weight: 0
